# open-knight

./: .eslintignore  .gitignore  .prettierignore  .prettierrc.json  README.md  biome.json  eslint.config.js  histoire.config.ts  index.html  notes.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust-clippy.yml
.zed/: debug.json
docs/: CONTRIBUTING.md
scripts/: fix-binding-imports.js
src/: App.vue  applicationLayout.ts  componentRegistry.ts  histoire.setup.ts  main.ts  style.css  theme.ts
src-tauri/: .env  .gitignore  Cargo.toml  Entitlements.plist  Makefile.toml  chess.db  diesel.toml  main.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240101000000_initial.sql
src-tauri/migrations/2024-10-23-213933_mvp/: down.sql  up.sql
src-tauri/migrations/2024-11-09-183402_move_graph/: down.sql  up.sql
src-tauri/migrations/2024-11-11-000324_fix_date_column/: down.sql  up.sql
src-tauri/migrations/2024-11-27-165133_add_headers_table/: down.sql  up.sql
src-tauri/src/: api_types.rs  convert.rs  database.rs  db.rs  lib.rs  loader.rs  macros.rs  main.rs  models.rs  san.rs  schema.rs  state.rs  utils.rs
src-tauri/src/api/: chess.rs  command.rs  database.rs  mod.rs
src-tauri/src/api/commands/: chess.rs  database.rs  engine.rs  game.rs  mod.rs
src-tauri/src/api/commands/database/: entities.rs  games.rs  management.rs  mod.rs
src-tauri/src/api/commands/session/: lifecycle.rs  mod.rs  operations.rs  persistence.rs
src-tauri/src/chess/: mod.rs  tree.rs
src-tauri/src/chess_db/: mod.rs
src-tauri/src/chess_db/api/: mod.rs
src-tauri/src/chess_db/entities/: annotation.rs  mod.rs  move_tag.rs  player.rs
src-tauri/src/chess_db/migrations/: m20240101_000001_create_tables.rs
src-tauri/src/chess_db/models/: game.rs  move_.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/api/: mod.rs
src-tauri/src/db/entities/: opening.rs
src-tauri/src/db/migrations/: db-design.plantuml  m20250101_000001_create_tables.rs  mod.rs
src-tauri/src/db/models/: game.rs  move_.rs
src-tauri/src/db/models/game/: pgn.rs
src-tauri/src/db/test-data-pgn/: my-games.pgn  single-game.pgn
src-tauri/src/engine/: builder.rs  engine.rs  events.rs  manager.rs  mod.rs  process.rs  uci.rs  utils.rs
src-tauri/src/engine/io_handler/: input_handler.rs  mod.rs  output_handler.rs
src-tauri/src/engine/protocol/: mod.rs  uci_protocol.rs
src-tauri/src/engine/state/: engine_state.rs  mod.rs
src-tauri/src/entities/: annotation.rs  evaluation.rs  game.rs  game_header.rs  game_tag.rs  gametag.rs  mod.rs  move.rs  move_.rs  move_tag.rs  move_time_tracking.rs  opening.rs  player.rs  position.rs  prelude.rs  tag.rs  tournament.rs  user.rs
src-tauri/src/lib/ok-analysis/: Cargo.toml
src-tauri/src/lib/ok-analysis/src/: lib.rs  utils.rs
src-tauri/src/lib/ok-analysis/src/move/: mod.rs
src-tauri/src/lib/ok-analysis/src/position/: mod.rs
src-tauri/src/lib/ok-analysis/src/position/tactics/: fork.rs  mod.rs  utils.rs
src-tauri/src/lib/ok-engine-manager/: Cargo.toml
src-tauri/src/lib/ok-engine-manager/src/: builder.rs  events.rs  lib.rs  manager.rs  process.rs  utils.rs
src-tauri/src/lib/ok-engine-manager/src/io_handler/: input_handler.rs  output_handler.rs
src-tauri/src/lib/ok-engine-manager/src/protocol/: mod.rs  uci_protocol.rs
src-tauri/src/lib/ok-engine-manager/src/state/: engine_state.rs  mod.rs
src-tauri/src/lib/ok-parse/: Cargo.toml
src-tauri/src/lib/ok-parse/src/: lib.rs
src-tauri/src/lib/ok-parse/src/pgn/: complex.rs  mod.rs  simple.rs  util.rs
src-tauri/src/lib/ok-parse/src/uci/: complex.rs  mod.rs  simple.rs  util.rs
src-tauri/src/lib/ok-utils/: Cargo.toml
src-tauri/src/lib/ok-utils/src/: lib.rs  macros.rs
src-tauri/src/lib/open-knight-parse/: Cargo.toml
src-tauri/src/lib/open-knight-parse/src/pgn/: complex.rs  mod.rs  simple.rs
src-tauri/src/lib/open-knight-parse/src/uci/: simple.rs
src-tauri/src/migrations/: db-design.plantuml  m20240101_000001_create_tables.rs  m20240102_000001_add_cascade_constraints.rs  m20240103_000001_add_game_headers_table.rs  mod.rs  tables.rs
src-tauri/src/models/: api.rs  app_user.rs  db.rs  game.rs  mod.rs  move_.rs
src-tauri/src/models/game/: conversion.rs  database.rs  header_ops.rs  metadata.rs  mod.rs  pgn.rs  player_ops.rs  structs.rs
src-tauri/src/models/move_tree/: mod.rs  mutation.rs  navigation.rs  parse.rs  util.rs
src-tauri/src/parse/: mod.rs  pgn.rs
src-tauri/src/parse/uci/: complex.rs  mod.rs  simple.rs
src-tauri/src/parser/: mod.rs
src-tauri/src/session/: game_session.rs  mod.rs
src/assets/pgns/: best-chess-games-collection-p1.pgn  chess_com_games_2024-10-31.pgn  demo_multiple_games.pgn  londons.pgn
src/components/: AnalysisLines.vue  AspectRatio.vue  EngineEvaluation.vue  GameBoard.vue  GameExplorer.vue  GameHeaders.vue  GameNotes.vue  LayoutPanel.vue  MenuBar.vue  MoveTree.vue  PgnImport.vue  StatusBar.vue
src/components/AnnotationArrow/: AnnotationArrow.story.vue  AnnotationArrow.vue
src/components/AppLayout/: AppLayout.vue  ContainerRenderer.vue  LayoutRenderer.vue  Panel.vue  SlotForwarder.vue  WindowItem.vue  WindowRenderer.vue
src/components/Basic/: InplaceEdit.vue
src/components/ChessBoard/: ChessBoard.vue  ChessBoardSquare.vue  types.ts  useChessBoard.ts  utils.ts
src/components/ChessMoveTree/: ChessMove.vue  ChessMoveTree.vue
src/components/EngineAnalysis/: EngineAnalysisPanel.vue  EngineSettings.vue
src/composables/: useError.ts  useFormatting.ts  useInjection.ts  useMoveData.ts  useProviders.ts  useResizePanel.ts
src/histoire/: ComponentWrapper.vue
src/services/: Analysis.ts  AnalysisService.ts  EngineService.ts  ErrorService.ts  GameService.ts  ImportExportService.ts
src/shared/: api-conversions.ts  api.ts  store.ts  themes.ts  types.ts  utils.ts
src/stores/: engineAnalysis.ts  game.ts  games.ts  index.ts  settings.ts  ui.ts
src/test/: mock.ts  mock_data.json  temp.txt
(+57 files in other folders)
