[package]
name = "open-knight"
version = "0.1.0"
description = "An open source chess db and analysis app"
authors = ["Reid Pritchard"]
edition = "2021"

[lib]
name = "open_knight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["macos-private-api"] }
tauri-plugin-shell = "2.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shakmaty = "0.27.2"
ts-rs = { version = "~11.0.0", features = ["serde-compat"] }
sea-orm = { version = "1.1.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
] }
sea-orm-migration = { version = "1.1.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
rustls = { version = ">0.22.0" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "2"
slotmap = { version = "1.0", features = ["serde"] }
ok-parse = { path = "./src/lib/ok-parse" }

[workspace]
members = ["./src/lib/*"]

[workspace.dependencies]
chumsky = "0.9.0"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
