[package]
name = "open-knight"
version = "0.1.0"
description = "An open source chess db and analysis app"
authors = ["Reid Pritchard"]
edition = "2021"

[lib]
name = "open_knight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["devtools"] }
ok-parse = { path = "./src/lib/ok-parse" }
ok-analysis = { path = "./src/lib/ok-analysis" }
ok-engine-manager = { path = "./src/lib/ok-engine-manager" }
tauri-plugin-shell = "2.3.0"
log = "0.4.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shakmaty = "0.27.2"
ts-rs = { version = "~11.0.0", features = ["serde-compat"] }
sea-orm = { version = "1.1.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
] }
sea-orm-migration = { version = "1.1.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
rustls = { version = ">0.22.0" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "2"
slotmap = { version = "1.0", features = ["serde"] }
itertools = "0.14.0"
tauri-plugin-log = "2.6.0"

[workspace]
members = ["./src/lib/*"]

[workspace.dependencies]
ok-parse = { path = "./src/lib/ok-parse" }
chumsky = "0.9.0"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.27"
pretty_env_logger = "0.5.0"
shakmaty = "0.27.2"
tokio = { version = "1", features = ["full"] }
