[package]
name = "ok-engine-manager"
version = "0.1.0"
description = "An Open Knight library for chess engine management"
authors = ["Reid Pritchard"]
edition = "2021"

[dependencies]
ok-utils = { workspace = true }
ok-parse = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
shakmaty = { workspace = true }
tokio = { workspace = true }
ts-rs = { workspace = true }
